put notes in notes, Got the bare bones done

--- a/donut-clicker-0523-Numbah6-main/index.html
+++ b/donut-clicker-0523-Numbah6-main/index.html
@@ -8,7 +8,32 @@
     <title>Donut Clicker</title>
 </head>
 <body>
-  
-    <script src="app.js"></script>
+    <button id="clicker" onclick="addDonut()"><h1>Bring on the Bake!</h1></button>
+
+    <main>
+        <div>
+            <p>Donuts Baked: <span id="donutCount"></span></p>
+        </div>
+
+        <div>
+            <p>Donut Clicks: <span id="clickCount"></span></p>
+        </div>
+
+        <div>
+            <button id="buyAutoOven"><P>Buy Auto Oven</P></button>
+        </div>
+
+        <div>
+            <p> Auto Oven Count: <span id="autoClickerCount"></span></p>
+        </div>
+
+        <div>
+            <p>Auto Count Cost: <span id="autoClickerCost"></span></p>
+        </div>
+    </main>
+
+
+    <script src="app.js"></script>  
 </body>
+
 </html>
