Button Grays auto until condition is met

--- a/donut-clicker-0523-Numbah6-main/index.html
+++ b/donut-clicker-0523-Numbah6-main/index.html
@@ -37,6 +37,7 @@
     <button class="devbutton">Developer</button>
     <div class="dev-content">
         <a href="https://github.com/Numbah6" target="_blank">GitHub</a>
+        <a href="https://github.com/Numbah6/New-Portfolio-project.git" target="_target">My Portfolio</a>
     </div>
 </div>
 
