Added background image

--- a/donut-clicker-0523-Numbah6-main/index.html
+++ b/donut-clicker-0523-Numbah6-main/index.html
@@ -43,10 +43,10 @@
 
 </header>
 
-    
 
-    <main>
-        <button id="clicker" onclick="addDonut()">Bring on the Bake!</button>
+<main>
+    
+        <button id="clicker" onclick="addDonut()" class="bake">Bring on the Bake!</button>
 
         <div>
             <p>Donuts Baked: <span id="donutCount"></span></p>
@@ -70,7 +70,7 @@
     </main>
 
     <footer>
-        <button id="reset" onclick="resetGame()">Reset</button>
+        <button id="reset" onclick="resetGame()" value="Reset Game">Reset</button>
     </footer>
 
 
